# mux-proofs-impl

./: .gitignore  Cargo.toml  README.md
benches/: README.md  bench.rs
descs/: naive_lc.txt
src/: coset_lookup.rs  error.rs  lib.rs  naive.rs  notes.txt  prover.rs  rng.rs  succinct_lookup.rs  test.rs
