[package]
name = "mux-proofs-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.3.0", default-features = false, features= ["parallel"] }
ark-poly = { version = "0.3.0", default-features = false, features= ["parallel"] }
ark-ec = { version = "0.3.0", default-features = false, features= ["parallel"] }
ark-std = { version = "0.3.0", default-features = false, features= ["parallel"] }
itertools = "0.13.0"
ark-poly-commit = { version = "^0.3.0", default-features = false, features= ["parallel"] }
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
rand_chacha = { version = "0.3.0", default-features = false }

[dev-dependencies]
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
rand_chacha = { version = "0.3.0", default-features = false }
csv = { version = "1.1.3" }

[[bench]]
name = "mux_proofs_benches"
path = "benches/bench.rs"
harness = false
